[project]
name = "perplexity-ai-clone"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "engkimo", email = "dailyrandor@gmail.com" }
]
dependencies = [
    "langchain==0.2.3",
    "langchain-openai==0.1.8",
    "langgraph==0.0.66",
    "langserve==0.2.2",
    "langchain-community==0.2.4",
    "fastapi==0.111.0",
    "sse-starlette>=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/original_perplexityai_clone"]
